# matrix-multiplication-parallel

./: README.md
Matrices/Left/: 1000.txt  3.txt  30.txt  300.txt
Matrices/Right/: 1000.txt  3.txt  30.txt  300.txt
MatrixGenerator/: matgen.go
goroutine/: matmul.go
openmpi/: CMakeLists.txt
openmpi/src/: matmul.cpp  matmul2.cpp
sequential/: CMakeLists.txt
sequential/src/: matrix_multiply.cpp
